kubernetes/nginx-in-sandbox-namespace.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: sandbox
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
  serviceAccountName: prometheus
