kubernetes/spawn_cloudbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloudbox
  namespace: default
  labels:
    name: cloudbox
spec:
  terminationGracePeriodSeconds: 1
  containers:
  - name: cloudbox
    image: chronicc/cloudbox:0.2.0
    resources:
      limits:
        cpu: 500m
        memory: '0.5Gi'
    args:
    - /bin/bash
    - -c
    - "while true; do sleep 1; done"
