kubernetes/spawn_pod_with_tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
  namespace: default
  labels:
    name: toolbox
spec:
  containers:
  - name: toolbox
    image: alpine
    command: ['/bin/sh']
    args: ['-c', 'sleep 3600']
