kubernetes/spawn_pod_with_lb_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-with-loadbalancer
  labels:
    name: nginx-with-loadbalancer
spec:
  selector:
    matchLabels:
      name: nginx-with-loadbalancer
  template:
    metadata:
      labels:
        name: nginx-with-loadbalancer
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            cpu: 500m
            memory: '0.2Gi'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-with-loadbalancer-service
spec:
  selector:
    name: nginx-with-loadbalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
